wip: various fixes and update
- Move to JDK 16
- Move to ZGC
- Fix reference counting bugs
- Rename IOScheduler to TaskScheduler
- Remove lmax disruptor
- Remove fastutil